--- a/index2.html
+++ b/index2.html
@@ -53,12 +53,12 @@
       </div>
       <div class="row heading">
         <div class="span12">
-          <h1>Bitstarter Title</h1>
+          <h1>ManyIO Bitstarter Title</h1>
         </div>
       </div> 
      <div class="row subheading">
         <div class="span12">
-          <p class="lead">This is my first bitstarter project.</p>
+          <p class="lead">This is manyIO's first bitstarter project.</p>
         </div>
       </div>
       <div class="row pitch">
